tests/negative-fixtures/banned_systemtime_alias/src/lib.rs
type WallClock = std::time::SystemTime;

pub fn wall_clock_now() -> WallClock {
    WallClock::now()
}
